# tinyxfileloader

./: .editorconfig  CMakeLists.txt  LICENCE  Readme.md  example.cpp  tinyxfileloader.h  tinyxloader.h
tests/: CMakeLists.txt  XFileLoad.test.cpp  main.cpp
tests/sample/: cube.x  cube_frame.x
